Salesforce Project/force-app/main/default/objects/Customer/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <displayFormat>Cus-{0000}</displayFormat>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>