Salesforce Project/force-app/main/default/objects/Customer/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>