Salesforce Project/force-app/main/default/objects/Customer/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Factories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>