Salesforce Project/force-app/main/default/objects/Customer/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>