Salesforce Project/force-app/main/default/objects/Customer/fields/Village_City__c.field-meta.xml
<CustomField>
    <fullName>Village_City__c</fullName>
    <label>Village/City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>